--- a/CSS/components/nav-bar.css
+++ b/CSS/components/nav-bar.css
@@ -22,10 +22,23 @@
   color: #2e363e;
 }
 
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotateY(360deg);
+  }
+  100% {
+    transform: none;
+  }
+}
+
 .nav__notification {
   position: absolute;
   left: 15px;
-  top: -11px;
+  top: -20px;
+  animation: notificationAnimation 2s ease-in-out infinite;
 }
 
 .nav__newellipsis {
@@ -49,5 +62,35 @@
   display: flex;
   justify-content: center;
   position: absolute;
-  right: -8px;
+  right: 12px;
+  top: 72px;
+}
+
+@keyframes appearBtnAnimation {
+  from {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
+.nav__btn {
+  transform: translateY(50px);
+  opacity: 0;
+  animation: appearBtnAnimation 1s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.nav__btn:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+.nav__btn:last-child {
+  animation-delay: 0.9s;
 }
