--- a/CSS/components/screen-header.css
+++ b/CSS/components/screen-header.css
@@ -14,3 +14,16 @@
 .screen__header__icons span {
   margin-left: 25px;
 }
+
+@keyframes rotatecog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+.screen__header__icons .fa-cog:hover {
+  animation: rotatecog 3s linear infinite;
+}
