--- a/CSS/components/user-component.css
+++ b/CSS/components/user-component.css
@@ -43,10 +43,11 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.4);
+  color: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin-right: 13px;
 }
 
 .user-component__time {
