--- a/CSS/screens/find.css
+++ b/CSS/screens/find.css
@@ -1,22 +1,3 @@
-.find-icons {
-  display: flex;
-  justify-content: space-between;
-}
-
-.find-icons__icon {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.find-icons__icon i {
-  font-size: 30px;
-}
-
-.find-icons__icon span {
-  margin-top: 20px;
-}
-
 .recommended-friends {
   margin: 25px 0px;
   padding: 25px 0px;
@@ -52,6 +33,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .open-post__title {
@@ -60,7 +44,7 @@
 }
 
 .open-post__hashtags {
-  text-transform: uppercase;
+  /* ^text-transform: uppercase;  */
   opacity: 0.6;
 }
 
@@ -73,7 +57,7 @@
 .open-post__members {
   display: flex;
   align-items: center;
-  margin-top: 3px;
+  margin-top: 7px;
 }
 
 .open-post__member-count {
@@ -117,4 +101,24 @@
 
 .open-post__heart-count span {
   margin-left: 3px;
+}
+
+@keyframes heartBeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(0.5);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+.open-post__heart-count:hover i {
+  will-change: tranform;
+  animation: heartBeat 1s linear infinite;
 }
