--- a/CSS/screens/friends.css
+++ b/CSS/screens/friends.css
@@ -29,3 +29,28 @@
   justify-content: space-between;
   color: rgba(0, 0, 0, 0.4);
 }
+
+@keyframes hideSplashScreen {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+#splash-screen {
+  background-color: var(--yellow);
+  color: rgb(61, 26, 19);
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 120px;
+  animation: hideSplashScreen 0.6s ease-in-out forwards;
+  animation-delay: 2s;
+}
