--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,12 +6,19 @@
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
+@import "components/alt-screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/icon-row.css";
+@import "components/no-mobile.css";
 /* screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chat.css";
+
 body {
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -20,7 +27,7 @@ body {
 }
 
 .first-page {
-  background-color: rgb(250, 212, 0);
+  background-color: var(--yellow);
 }
 
 .main-screen {
