--- a/CSS/components/screen-header.css
+++ b/CSS/components/screen-header.css
@@ -24,6 +24,44 @@
   }
 }
 
+@keyframes scaleSearch {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes danceMusic {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  25% {
+    transform: rotateZ(30deg);
+  }
+  50% {
+    transform: rotateZ(0deg);
+  }
+  75% {
+    transform: rotateZ(-30deg);
+  }
+  100% {
+    transform: rotateZ(0deg);
+  }
+}
+
 .screen__header__icons .fa-cog:hover {
   animation: rotatecog 3s linear infinite;
+}
+
+.screen__header__icons .fa-search:hover {
+  animation: scaleSearch 1s ease-in-out infinite;
+}
+
+.screen__header__icons .fa-music:hover {
+  animation: danceMusic 1s linear infinite;
 }
